--- a/my-app/src/CharacterWindow.css
+++ b/my-app/src/CharacterWindow.css
@@ -1,12 +1,20 @@
 
 .characterWindowContainer {
+  padding-top: 24px;
+  padding-left: 48px;
+}
+
+.characterImageContainer {
+  display: block;
+  max-width: 500px;
+  max-height: 500px;
+  height: 500px;
 }
 
 .dummyCharacterImage {
   background-color: gray;
-  display: block;
-  height: 500px;
-  width: 300px;
+  height: 100%;
+  width: auto;
 }
 
 .informationBox {
