--- a/my-app/src/InventoryWindow.css
+++ b/my-app/src/InventoryWindow.css
@@ -48,6 +48,14 @@
 }
 
 .itemImageContainer {
+  width: 300px;
+  height: 300px;
   border: 1px solid black;
   background-color: gray;
+}
+
+.itemImage {
+  width: 300px;
+  height: 300px;
+  object-fit: contain;
 }
