changed menu functionality from mounting and unmounting to toggling display visibility, added textures and styling

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,11 @@
+* {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .App {
   text-align: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  background: black;
 }
