--- a/my-app/src/InventoryWindow.css
+++ b/my-app/src/InventoryWindow.css
@@ -1,10 +1,17 @@
 
 
+.inventoryWindowContainer {
+  background-image: url('./assets/wooden-textured-background.jpg');
+  color: white;
+  /* <a href="https://www.freepik.com/free-photo/wooden-textured-background_2768392.htm#query=wooden%20texture&position=3&from_view=search&track=sph">Image by rawpixel.com</a> on Freepik */
+}
+
 .inventoryWindow {
   display: grid;
   width: 75%;
   height: 100vh;
   grid-template-columns: auto 24px;
+  
 }
 
 .header {
@@ -13,7 +20,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 8px 32px;
-  border-bottom: 1px solid black;
+  background-image: url('./assets/wooden-textured-background.jpg');
+  color: white;
+  /* <a href="https://www.freepik.com/free-photo/wooden-textured-background_2768392.htm#query=wooden%20texture&position=3&from_view=search&track=sph">Image by rawpixel.com</a> on Freepik */
 }
 
 .menuButton {
@@ -28,7 +37,9 @@
 .galleryContainer {
   height: 75vh;
   padding: 48px;
-  overflow: scroll;
+  overflow-y: scroll;
+  background-image: url('./assets/texture-background.jpg');
+  /* <a href="https://www.freepik.com/free-photo/texture-background_1167463.htm#query=wooden%20texture&position=46&from_view=search&track=sph">Image by yingyang</a> on Freepik */
 }
 
 .gallery {
@@ -38,20 +49,22 @@
 }
 
 .item {
-  border: 1px solid black;
   width: 300px;
   height: 360px;
   display: grid;
   grid-template-rows: auto 60px;
   margin-right: 24px;
   margin-bottom: 24px;
+  color: black;
+  background-image: url('./assets/grunge-vintage-old-paper-background.jpg');
+  box-shadow: 0px 0px 8px black;
+  /* <a href="https://www.freepik.com/free-photo/grunge-vintage-old-paper-background_1273370.htm#query=old%20paper&position=4&from_view=keyword">Image by aopsan</a> on Freepik */
 }
 
 .itemImageContainer {
   width: 300px;
   height: 300px;
-  border: 1px solid black;
-  background-color: gray;
+  /* background-color: gray; */
 }
 
 .itemImage {
