--- a/my-app/src/MenuWindow.css
+++ b/my-app/src/MenuWindow.css
@@ -3,10 +3,13 @@
 .menuWindow {
   height: 100vh;
   width: 300px;
-  border: 1px solid black;
+  box-shadow: 0px 0px 24px black;
   position: absolute;
   right: 25%;
   background-color: white;
+  display: none;
+  background-image: url('./assets/grunge-vintage-old-paper-background.jpg');
+  /* <a href="https://www.freepik.com/free-photo/grunge-vintage-old-paper-background_1273370.htm#query=old%20paper&position=4&from_view=keyword">Image by aopsan</a> on Freepik */
 }
 
 .menuLink:hover {
