--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,5 +7,60 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background: black;
+  background-image: url('./assets/ronaldo-de-oliveira-ZjRVXOHZGyI-unsplash.jpg');
+  background-position-x: 50%;
+  background-position-y: -7000px;
+  /* Photo by <a href="https://unsplash.com/@ronaldordeoliveira?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ronaldo de Oliveira</a> on <a href="https://unsplash.com/s/photos/fantasy-forest?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   */
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 32px;
+  background-image: url('./assets/wooden-textured-background.jpg');
+  color: white;
+  text-shadow: 0px 0px 8px #000;
+  /* <a href="https://www.freepik.com/free-photo/wooden-textured-background_2768392.htm#query=wooden%20texture&position=3&from_view=search&track=sph">Image by rawpixel.com</a> on Freepik */
+}
+
+/* .custom-btn and .btn-1 button styling modified from https://codepen.io/yuhomyan/pen/jOqvjZq */
+.custom-btn {
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-size: 16px;
+  font-weight: 900;
+  font-style: normal;
+  text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+  text-decoration: none;
+  background: transparent;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 0px 1px 0px rgba(255,255,255,1),0px 1px 3px rgba(0,0,0,0.3);
+  outline: none;
+  border: 1px solid #ba6;
+}
+
+.custom-btn:active{
+}
+
+.btn-1{
+  color: #fff;
+background-image: -webkit-repeating-linear-gradient(left, rgba(255, 238, 170, 0) 0%, rgba(255, 238, 170, 0) 3%, rgba(255, 238, 170, .1) 3.75%),
+   -webkit-repeating-linear-gradient(left, rgba(170, 153, 85, 0) 0%, rgba(170, 153, 85, 0) 2%, rgba(170, 153, 85, .03) 2.25%),
+   -webkit-repeating-linear-gradient(left, rgba(255, 238, 170, 0) 0%, rgba(255, 238, 170, 0) .6%, rgba(255, 238, 170, .15) 1.2%),
+   
+   /* linear-gradient(180deg, #a95 0%, 
+   #fea 47%, 
+   #dc8 53%,
+   #fea 100%); */
+
+   linear-gradient(180deg, #a95 0%, 
+   #fea 97%, 
+   #fea 100%);
+ 
 }
