--- a/my-app/src/CharacterWindow.css
+++ b/my-app/src/CharacterWindow.css
@@ -9,18 +9,18 @@
   display: block;
   height: 500px;
   width: 300px;
-  /* background-color: gray; */
   position: relative;
 }
 
 .informationBox {
-  border: 1px solid black;
   display: block;
   width: 300px;
   margin-top: 24px;
   background-image: url('./assets/wooden-textured-background.jpg');
-  color: white;
-  /* <a href="https://www.freepik.com/free-photo/wooden-textured-background_2768392.htm#query=wooden%20texture&position=3&from_view=search&track=sph">Image by rawpixel.com</a> on Freepik */
+  color: black;
+  background-image: url('./assets/grunge-vintage-old-paper-background.jpg');
+  box-shadow: 0px 0px 8px black;
+  /* <a href="https://www.freepik.com/free-photo/grunge-vintage-old-paper-background_1273370.htm#query=old%20paper&position=4&from_view=keyword">Image by aopsan</a> on Freepik */
 }
 
 .characterImage {
