--- a/my-app/src/CharacterSelectWindow.css
+++ b/my-app/src/CharacterSelectWindow.css
@@ -19,7 +19,14 @@
 .formContainer {
   display: block;
   height: 100%;
-  background-image: url('./assets/grunge-vintage-old-paper-background.jpg');
+}
+
+form {
+  height: 75%;
+  box-shadow: 0px 0px 8px black;
+  animation-name: swipe-up;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;background-image: url('./assets/grunge-vintage-old-paper-background.jpg');
   color: black;
   /* <a href="https://www.freepik.com/free-photo/grunge-vintage-old-paper-background_1273370.htm#query=old%20paper&position=4&from_view=keyword">Image by aopsan</a> on Freepik */
 }
