--- a/my-app/src/CharacterWindow.css
+++ b/my-app/src/CharacterWindow.css
@@ -32,12 +32,12 @@
   left: 0px;
 }
 
-.topImage {
+.topImage, .bottomImage, .headImage, .handsImage, .shoesImage, .accessoriesImage {
   position: absolute;
-  top: 100px;
-  left: 75px;
-  height: 50%;
-  width: 50%;
   object-fit: contain;
   display: none;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
 }
