--- a/my-app/src/InventoryWindow.css
+++ b/my-app/src/InventoryWindow.css
@@ -53,7 +53,7 @@
 .itemImageContainer {
   width: 300px;
   height: 300px;
-  /* background-color: gray; */
+  background-color: white; 
 }
 
 .itemImage {
