--- a/my-app/src/InventoryWindow.css
+++ b/my-app/src/InventoryWindow.css
@@ -54,6 +54,12 @@
   /* <a href="https://www.freepik.com/free-photo/grunge-vintage-old-paper-background_1273370.htm#query=old%20paper&position=4&from_view=keyword">Image by aopsan</a> on Freepik */
 }
 
+.item:hover {
+  color: white;
+  text-shadow: 0px 0px 8px rgb(81, 45, 45);
+  box-shadow: 0px 0px 32px black;
+}
+
 .itemImageContainer {
   width: 300px;
   height: 300px;
@@ -64,6 +70,14 @@
   width: 300px;
   height: 300px;
   object-fit: contain;
+}
+
+.itemImage:hover {
+  cursor: pointer;
+}
+
+.itemName:hover {
+ cursor: pointer;
 }
 
 .equip-button {
